# vox-hs

./: LICENSE  flake.nix  gox-hs.cabal  vox-hs.cabal
app/: Main.hs  Parameters.hs
src/: GLVoxInfo.hs  Gox.hs  Vox.hs
src/Gox/: Draw.hs  Parse.hs  Shape.hs  Tree.hs  Turtle.hs  Type.hs  Util.hs  Write.hs
src/Gox/Shape/: Bezier.hs
src/Gox/Tree/: Algorithm.hs  Type.hs
src/Vox/: Draw.hs  GLVoxInfo.hs  Gox.hs  Parse.hs  Shape.hs  Tree.hs  Type.hs  Write.hs
src/Vox/Gox/: Parse.hs  Type.hs  Util.hs  Write.hs
src/Vox/Shape/: AABB.hs  Bezier.hs  Class.hs  Util.hs
src/Vox/Tree/: Algorithm.hs  Parameters.hs  Renderable.hs  Turtle.hs  Type.hs
