cabal-version:      2.4
name:               vox-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
license-file:       LICENSE
author:             Will
maintainer:         wveatchw@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.org

library
    exposed-modules: Vox
                     Vox.Type
                     Vox.Parse
                     Vox.Write
                     Vox.Draw

                     Gox
                     Gox.Type
                     Gox.Parse
                     Gox.Write

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
                    , binary
                    , bytestring
                    , vector
                    , containers
                    , linear
                    , JuicyPixels
    hs-source-dirs:   src
    default-language: Haskell2010

executable demo
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.16.1.0
                    , vox-hs
    default-language: Haskell2010