cabal-version:      2.4
name:               vox-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
license-file:       LICENSE
author:             Will
maintainer:         wveatchw@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.org

library
    exposed-modules: Vox.Gox
                   , Vox.Gox.Parse
                   , Vox.Gox.Type
                   , Vox.Gox.Util
                   , Vox.Gox.Write
                   , Vox.Shape
                   , Vox.Shape.AABB
                   , Vox.Shape.Bezier
                   , Vox.Shape.Class
                   , Vox.Shape.Util
                   , Vox.Tree
                   , Vox.Tree.Algorithm
                   , Vox.Tree.Turtle
                   , Vox.Tree.Type
                   , Vox.GLVoxInfo                     

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
                    , binary
                    , bytestring
                    , vector
                    , hmatrix
                    , containers
                    , linear
                    , lens
                    , optics-core
                    , optics-extra
                    , JuicyPixels
                    , MonadRandom
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -W
                      -Wall
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wpartial-fields
                      -Werror=missing-home-modules
                      -Widentities
                      -Wredundant-constraints
                      -O2

executable demo
    main-is:          Main.hs
    other-modules:    Parameters
    hs-source-dirs:   app
    build-depends:    base ^>=4.16.1.0
                    , vox-hs
                    , linear
                    , vector 
                    , hmatrix
                    , JuicyPixels
                    , pretty-simple
    default-language: Haskell2010
    ghc-options:      -W
                      -Wall
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wpartial-fields
                      -Werror=missing-home-modules
                      -Widentities
                      -Wredundant-constraints
                      -O2
                      -prof
                      -fprof-auto
                      -rtsopts